fixed overflow on top slide

--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -15,7 +15,7 @@
 
 .top {
   width: 111.7vw;
-  right: 42rem;
+  right: 46rem;
 }
 
 .bottom {
